# sensr_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_console_sample.sh  build_imgui_sample.sh  build_output_recorder.sh  build_sdk.sh  flake.nix  rco_dio_zone_velocity.sh  zone_info(zone,pin,velocity).txt
build_console/: CMakeCache.txt
envoy/: envoy.yaml  output.pb
include/: argos.h  argos_client.h  sensr.h  sensr_client.h  sensr_message_listener.h  websocket_endpoint.h
javascript/: .eslintrc.json  README.md  devtips.md  gen_proto.sh  package-lock.json  package.json  troubleshooting.md
javascript/console_output/: console_output.js  console_output_secure.js  package-lock.json  package.json
javascript/console_output_secure/: output_selector.js
javascript/example/: package-lock.json  package.json  social_distancing.js
javascript/examples/: .eslintrc.json  basic_example.js  package-lock.json  package.json  run_sdk.js  social_distancing.js
javascript/javascript_sdk/: .eslintrc.json  .gitignore  envoy.yaml  gen_proto.sh  package-lock.json  package.json
javascript/javascript_sdk/src/: get_data.js  index.html  index.js  label_utils.js  message_receiver.js  output_selector.js  parse_output.js  print_utils.js  sensr_client.js  style.css
javascript/javascript_sdk/src2/: index.js  style.css
javascript/src/: index.js  label_utils.js  message_receiver.js  parse_output.js  print_utils.js
javascript/test/: client.js  customer.js  data_type_pb.js  global_type_pb.js  index.html  labels_pb.js  output_grpc_web_pb.js  output_pb.js  package-lock.json  package.json  type_pb.js
javascript/test/js_proto/sensr_proto/: command_pb.js  output_grpc_web_pb.js  output_pb.js  point_cloud_pb.js  rest_api_pb.js  type_pb.js
keys/: sensr-sdk-ca.crt
proto/: CMakeLists.txt  README.md  data_type.proto  labels.proto  output.proto
proto/argos_proto/: type.proto
proto/sensr_proto/: command.proto  custom.proto  global_type.proto  output.proto  point_cloud.proto  rest_api.proto  type.proto
python/: .gitignore  README.md  configure.sh  console_output.py  console_output_secure.py  devtips.md  gen_proto.sh  message_receiver.py  output_message_receiver.py  parse_output.py  point_result_receiver.py  produce_graph.py  requirements.txt  resident_time.py  save_load_output.py  sensr_message_listener.py
rco_dio_zone_velocity/: CMakeCache.txt  Makefile  cmake_install.cmake  rco_dio_zone_velocity
samples/console_output/: CMakeLists.txt  main.cpp
samples/imgui_display/: CMakeLists.txt  main.cpp
samples/imgui_display/glad/: CMakeLists.txt
samples/imgui_display/glad/include/glad/: glad.h
samples/imgui_display/glad/src/: glad.cpp
samples/output_recorder/: CMakeLists.txt  main.cpp  replay.proto
samples/rco_dio_control/code c/: RCO_DIO_control.c
samples/rco_dio_control/python/: RCO_control.py  README.md
samples/rco_dio_zone_velocity/: CMakeLists.txt  main.cpp
samples/xavier_dio_control/: MIC-730AI_dio.c  Makefile
src/: Makefile  argos_client.cpp  logging.h  message_broker.cpp  message_broker.h  sensr_client.cpp  sensr_message_listener.cpp  websocket_endpoint.cpp  websocket_endpoint.h
src/websocket/: websocket_endpoint.cpp  websocket_endpoint.h  websocket_endpoint_base.cpp  websocket_endpoint_base.h  websocket_secure_endpoint.cpp  websocket_secure_endpoint.h
